--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,5 @@ version = "1.0.0"
 [prepare]
 dependences_file = "https://raw.githubusercontent.com/orelvis15/cvm_config/master/dependences.toml"
 workspace = "/opt/cardano/"
+haskell_ghc_version = "8.10.7"
+haskell_cabal_version = "3.4.0.0"
