--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,15 @@ version = "1.0.0"
 config_path = "https://raw.githubusercontent.com/orelvis15/cvm_config/master/"
 dependences_file = "dependences.toml"
 install_ghc_file = "install_ghc.sh"
-workspace = "/opt/cardano/"
 haskell_ghc_version = "8.10.7"
 haskell_cabal_version = "3.4.0.0"
+
+[workspace]
+path = "/opt/cardano/"
+script_folder = "script"
+files_folder = "files"
+db_folder = "db"
+guild_db_folder = "guild-db"
+sockets_folder = "sockets"
+priv_folder = "sockets"
+tmp_folder = "tmp"
