--- a/config.toml
+++ b/config.toml
@@ -3,8 +3,8 @@ version = "1.0.0"
 
 [init]
 config_path = "https://raw.githubusercontent.com/orelvis15/cvm_config/master/"
-dependences_file = "dependences.toml"
-install_ghc_file = "install_ghc.sh"
+ghcup_path = "https://get-ghcup.haskell.org"
+install_ghc_file = "install_ghc"
 haskell_ghc_version = "8.10.7"
 haskell_cabal_version = "3.4.0.0"
 
