--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ haskell_cabal_version = "3.6.2.0"
 
 [workspace]
 workspace_folder = "cardano"
-folders = ["script", "files", "db", "guild-db", "sockets", "priv", "tmp", "log", "bin", "git"]
+folders = ["script", "files", "db", "guild-db", "sockets", "priv", "tmp", "logs", "bin", "git"]
 
 [dependencies]
 macos = ["coreutils", "gnupg", "jq", "libsodium", "tcptraceroute"]
