refactor config file item folder

--- a/config.toml
+++ b/config.toml
@@ -90,116 +90,116 @@ path = "."
 [[config_file_item]]
 url = "https://hydra.iohk.io/job/Cardano/iohk-nix/cardano-deployment/latest-finished/download/1/{network}-byron-genesis.json"
 name = "byron-genesis.json"
-folder = "files"
+folder_key = "FILES"
 
 [[config_file_item]]
 url = "https://hydra.iohk.io/job/Cardano/iohk-nix/cardano-deployment/latest-finished/download/1/{network}-shelley-genesis.json"
 name = "shelley-genesis.json"
-folder = "files"
+folder_key = "FILES"
 
 [[config_file_item]]
 url = "https://hydra.iohk.io/job/Cardano/iohk-nix/cardano-deployment/latest-finished/download/1/{network}-alonzo-genesis.json"
 name = "alonzo-genesis.json"
-folder = "files"
+folder_key = "FILES"
 
 [[config_file_item]]
 url = "https://hydra.iohk.io/job/Cardano/iohk-nix/cardano-deployment/latest-finished/download/1/{network}-topology.json"
 name = "topology.json"
-folder = "files"
+folder_key = "FILES"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/files/config-{network}.json"
 name = "config.json"
-folder = "files"
+folder_key = "FILES"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/files/config-dbsync.json"
 name = "config-dbsync.json"
-folder = "files"
+folder_key = "FILES"
 
 # Script helpers
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/env"
 name = "env"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cnode.sh"
 name = "cnode.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/dbsync.sh"
 name = "dbsync.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cntools.sh"
 name = "cntools.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cntools.library"
 name = "cntools.library"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/logMonitor.sh"
 name = "logMonitor.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/setup_mon.sh"
 name = "setup_mon.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/topologyUpdater.sh"
 name = "topologyUpdater.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cabal-build-all.sh"
 name = "cabal-build-all.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/submitapi.sh"
 name = "submitapi.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/ogmios.sh"
 name = "ogmios.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/system-info.sh"
 name = "system-info.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/sLiveView.sh"
 name = "sLiveView.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/gLiveView.sh"
 name = "gLiveView.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/deploy-as-systemd.sh"
 name = "deploy-as-systemd.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cncli.sh"
 name = "cncli.sh"
-folder = "script"
+folder_key = "SCRIPT"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/grest-helper-scripts/setup-grest.sh"
 name = "setup-grest.sh"
-folder = "script"
+folder_key = "SCRIPT"
