change services to list

--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,9 @@ cnode_repository_name = "cardano-node"
 cardano_node = "cardano-node"
 cardano_cli = "cardano-cli"
 
-[services_item]
+#Services items
+
+[[services_item]]
 url = "https://raw.githubusercontent.com/orelvis15/cvm_config/master/systemd/"
 file = "cnode.service"
 name = "cnode"
