--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ git_assets = "https://github.com/orelvis15/cvm/releases/download"
 config_path = "https://raw.githubusercontent.com/orelvis15/cvm_config/master/"
 ghcup_url = "https://get-ghcup.haskell.org"
 ghcup_bin_path = ".ghcup/bin"
-ghcup_pattern_sed = "s/read /#/g"
+ghcup_pattern_sed = "s/read /#/g;/warn /s/^/#/g;/yellow /s/^/#/g;/die /s/^/#/g;/green /s/^/#/g"
 libsodium_repository = "https://github.com/input-output-hk/libsodium.git"
 libsodium_commit = "66f017f1"
 libsodium_folder = "libsodium"
