--- a/config.toml
+++ b/config.toml
@@ -191,101 +191,101 @@ pattern_sed=""
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/env"
 name = "env"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed="2,80s|.{HOME}/.cabal/bin|/opt/cardano/bin/current|g;s|/opt/cardano/cnode|/opt/cardano|g;/#CNODE_HOME=/s/^#//g;/#CNODE_PORT=/s/^#//g;/#CONFIG=/s/^#//g;/#SOCKET=/s/^#//g;/#TOPOLOGY=/s/^#//g;/#LOG_DIR=/s/^#//g;/DB_DIR=/s/^#//g;/CNODEBIN=/s/^#//g;/CCLI=/s/^#//g"
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cnode.sh"
 name = "cnode.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/dbsync.sh"
 name = "dbsync.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cntools.sh"
 name = "cntools.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cntools.library"
 name = "cntools.library"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/logMonitor.sh"
 name = "logMonitor.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/setup_mon.sh"
 name = "setup_mon.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/topologyUpdater.sh"
 name = "topologyUpdater.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cabal-build-all.sh"
 name = "cabal-build-all.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/submitapi.sh"
 name = "submitapi.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/ogmios.sh"
 name = "ogmios.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/system-info.sh"
 name = "system-info.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/sLiveView.sh"
 name = "sLiveView.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/gLiveView.sh"
 name = "gLiveView.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/deploy-as-systemd.sh"
 name = "deploy-as-systemd.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/cnode-helper-scripts/cncli.sh"
 name = "cncli.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
 
 [[config_file_item]]
 url = "https://raw.githubusercontent.com/cardano-community/guild-operators/master/scripts/grest-helper-scripts/setup-grest.sh"
 name = "setup-grest.sh"
-folder_key = "SCRIPT"
+folder_key = "SCRIPTS"
 pattern_sed=""
