add libsecp256k1 configuration

--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,10 @@ libsodium_commit = "66f017f1"
 libsodium_folder = "libsodium"
 libsodium_autogen_file = "./autogen.sh"
 libsodium_config_file = "./configure"
+libsecp256k1_repository = "https://github.com/bitcoin-core/secp256k1"
+libsecp256k1_commit= "ac83be33"
+libsecp256k1_autogen = "./autogen.sh"
+libsecp256k1_configure = "./configure"
 install_ghc_file = "install_ghc"
 haskell_ghc_version = "8.10.7"
 haskell_cabal_version = "3.6.2.0"
