add libsecp256k1 configuration

--- a/config.toml
+++ b/config.toml
@@ -20,8 +20,9 @@ libsodium_autogen_file = "./autogen.sh"
 libsodium_config_file = "./configure"
 libsecp256k1_repository = "https://github.com/bitcoin-core/secp256k1"
 libsecp256k1_commit= "ac83be33"
-libsecp256k1_autogen = "./autogen.sh"
-libsecp256k1_configure = "./configure"
+libsecp256k1_autogen_file = "./autogen.sh"
+libsecp256k1_configure_file = "./configure"
+libsecp256k1_folder = "secp256k1"
 install_ghc_file = "install_ghc"
 haskell_ghc_version = "8.10.7"
 haskell_cabal_version = "3.6.2.0"
