--- a/systemd/cnode.service
+++ b/systemd/cnode.service
@@ -10,8 +10,8 @@ RestartSec=60
 User={user}
 LimitNOFILE=1048576
 WorkingDirectory=/opt/cardano/scripts
-ExecStart=/bin/bash -l -c "exec sudo /opt/cardano/scripts/cnode.sh"
-ExecStop=/bin/bash -l -c "exec kill -2 $(ps -ef | grep /opt/cardano/bin/current/cardano-node.* | tr -s ' ' | cut -d ' ' -f2) &>/dev/null"
+ExecStart=/bin/bash -l -c "exec /opt/cardano/scripts/cnode.sh"
+ExecStop=/bin/bash -l -c "exec kill -2 $(ps -ef | grep /opt/cardano/bin/current/cardano-node.*./opt/cardano/ | tr -s ' ' | cut -d ' ' -f2) &>/dev/null"
 KillSignal=SIGINT
 SuccessExitStatus=143
 StandardOutput=syslog
